If selectedApplication doesn't exist, throw IllegalException